 * dsm now uses numDeriv::grad to calculate derivatives for variance estimation -- this should be much faster. Thanks to Jason Roberts for this fix.
 * dsm now requires mrds version 2.1.15 or higher, due to internal changes
 * fixed issue where Effort column was required even when segment.area was specified. Thanks to Greg Lollback for spotting this issue.

# 2.2.11
 * dsm.var.prop uses update() rather than messing around with eval()
 * print.summary.dsm.var didn't work for GAM variance when no detection function was specified, now fixed (thanks to Natalia Dellabianca for spotting this)
 * Removed non-working plot() code in variance examples --  see the Mexico pantropical spotted dolphins for a proper treatment of plotting using projections (http://distancesampling.org/R/vignettes/mexico-analysis.html)
 * plot.var.gam no longer crashes by default when distance data doesn't have columns "x" and "y"

# 2.2.10
 * corrected offsets in examples in dsm, dsm.var.prop, dsm.var.movblk
 * updated mexdolphins data with lat/long reversal in prediction data and non-list storage
 * stopped use of rqgam.check from being used with non-negbin/Tweedie responses (thanks to Phil Bouchet for highlighting this issue).

# 2.2.9
 * Moving block bootstrap now works when there is no detection function (suggested by Laura Williamson)
 * Mexico dolphin data has had the areas of the prediction grids and segments re-projected. Thanks to Phil Bouchet for pointing out this error. Context: https://groups.google.com/d/msg/distance-sampling/oj1j8mSmnTc/3cOAAJgBw9MJ


# 2.2.8
 * Speed up and reduced memory usage in variance calculations, thanks to Filipe Dias for asking about this.
 * Better error when no observations are matched to the detection function. Thanks to Ricardo Lima for highlighting this.
 * Check for missing columns had incorrect logic, now corrected and with tests. Thanks to Julia Migné for spotting this.

# 2.2.7