@@ -43,11 +43,15 @@ make.data <- function(response, ddfobject, segdata, obsdata, group,
     }
   }
 
-  # if the ps are all the same (count model) then just grab the 1 unique
-  # value
-  if(response %in% c("N","abundance","count","n")){
-    fitted.p <- unique(fitted.p)
-  }
+#  # if the ps are all the same (count model) then just grab the 1 unique
+#  # value
+#  if(response %in% c("N","abundance","count","n")){
+#    fitted.p <- unique(fitted.p)
+#  }
+
+  # reorder the fitted ps, making sure that
+  # they match the ordering in obsdata
+  fitted.p <- fitted.p[match(obsdata$object, names(fitted.p))]
 
   ## Aggregate response values of the sightings over segments
   if(response %in% c("D","density","Dhat","density.est")){
@@ -79,13 +83,27 @@ make.data <- function(response, ddfobject, segdata, obsdata, group,
   }
 
   # name the response data columns
-  names(responsedata)<-c(segnum.name,response)
+  names(responsedata) <- c(segnum.name, response)
 
   # Next merge the response variable with the segment records and any
   # response variable that is NA should be assigned 0 because these
   # occur due to 0 sightings
   dat <- merge(segdata, responsedata, by=segnum.name, all.x=TRUE)
   dat[,response][is.na(dat[, response])] <- 0
+
+  # for the offsets with effective area, need to make sure that
+  # the ps match the segments
+  # fitted.p is already in the same order as responsedata/obsdata
+  if(off.set == "eff.area"){
+    # if there are no covariates, and all the fitted ps are the same
+    # then just duplicate that value enough times for the segments
+    if(length(unique(fitted.p)) == 1){
+      fitted.p <- rep(unique(fitted.p), nrow(dat))
+    }else{
+      stop("Covariate detection functions are not currently supported with effective area as the offset")
+    }
+  }
+
 
   if(!is.null(segment.area)){
 
@@ -157,7 +175,7 @@ make.data <- function(response, ddfobject, segdata, obsdata, group,
   # multiply up by conversion factor
   dat$off.set <- dat$off.set*convert.units
 
-  # Set offset as log of area or effective area
+  # Set offset as log (or whatever link is) of area or effective area
   dat$off.set <- family$linkfun(dat$off.set)
 
   return(dat)
